haciendo la vercion desktop y ajustando la mobile

--- a/semana4/12-10/index.html
+++ b/semana4/12-10/index.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="./css/reducido.css [lramoon.github.io]">
 
     <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="style/movile.css">
+    <link rel="stylesheet" href="style/desktop.css">
+    <link rel="stylesheet" href="style/mobile.css">
 </head>
     <body>
         <header>
